2013-01-09  Carl Hetherington  <cth@carlh.net>

	* Try to build with 0.10.4-ish ffmpeg.

2013-01-07  Carl Hetherington  <cth@carlh.net>

	* Version 0.70 released.

2013-01-07  Carl Hetherington  <cth@carlh.net>

	* Fix heinous thinko in mono soundtrack mapping code.

2013-01-06  Carl Hetherington  <cth@carlh.net>

	* Version 0.70beta3 released.

2013-01-06  Carl Hetherington  <cth@carlh.net>

	* Postpone linking of duplicate video frames so that copies
	don't fail on Windows.

2013-01-06  Carl Hetherington  <cth@carlh.net>

	* Version 0.70beta2 released.

2013-01-06  Carl Hetherington  <cth@carlh.net>

	* Version 0.70beta1 released.

2013-01-06  Carl Hetherington  <cth@carlh.net>

	* Put mono soundtracks on the centre speaker, rather
	than on left (reported by Mike Blakesley).

	* Add format for 16:9 without letterboxing (requested by Lilian
	Lefranc).

2012-12-23  Carl Hetherington  <cth@carlh.net>

	* Version 0.69 released.

2012-12-23  Carl Hetherington  <cth@carlh.net>

	* Version 0.68 released.

2012-12-22  Carl Hetherington  <cth@carlh.net>

	* Version 0.68beta10 released.

2012-12-22  Carl Hetherington  <cth@carlh.net>

	* Fix wscripts to work with python 3.

2012-12-21  Carl Hetherington  <cth@carlh.net>

	* Version 0.68beta9 released.

2012-12-21  Carl Hetherington  <cth@carlh.net>

	* Version 0.68beta8 released.

2012-12-21  Carl Hetherington  <cth@carlh.net>

	* Version 0.68beta7 released.

2012-12-21  Carl Hetherington  <cth@carlh.net>

	* Version 0.68beta6 released.

2012-12-21  Carl Hetherington  <cth@carlh.net>

	* Fix a few bugs.

	* Update the manual.

2012-12-20  Carl Hetherington  <cth@carlh.net>

	* Version 0.68beta5 released.

2012-12-20  Carl Hetherington  <cth@carlh.net>

	* Version 0.68beta4 released.

2012-12-20  Carl Hetherington  <cth@carlh.net>

	* Version 0.68beta3 released.

2012-12-20  Carl Hetherington  <cth@carlh.net>

	* Allow still-image DCPs to have external audio added to them (#13).
