@@ -113,6 +113,7 @@ public:
 		SCALER,
 		DCP_TRIM_START,
 		DCP_TRIM_END,
+		REEL_SIZE,
 		DCP_AB,
 		CONTENT_AUDIO_STREAM,
 		EXTERNAL_AUDIO,
@@ -195,6 +196,11 @@ public:
 	SourceFrame dcp_trim_end () const {
 		boost::mutex::scoped_lock lm (_state_mutex);
 		return _dcp_trim_end;
+	}
+
+	boost::optional<uint64_t> reel_size () const {
+		boost::mutex::scoped_lock lm (_state_mutex);
+		return _reel_size;
 	}
 	
 	bool dcp_ab () const {
@@ -357,6 +363,8 @@ public:
 	void set_scaler (Scaler const *);
 	void set_dcp_trim_start (int);
 	void set_dcp_trim_end (int);
+	void set_reel_size (uint64_t);
+	void unset_reel_size ();
 	void set_dcp_ab (bool);
 	void set_content_audio_stream (boost::shared_ptr<AudioStream>);
 	void set_external_audio (std::vector<std::string>);
@@ -435,6 +443,8 @@ private:
 	int _dcp_trim_start;
 	/** Frames to trim off the end of the DCP */
 	int _dcp_trim_end;
+	/** Approximate target reel size in bytes; if not set, use a single reel */
+	boost::optional<uint64_t> _reel_size;
 	/** true to create an A/B comparison DCP, where the left half of the image
 	    is the video without any filters or post-processing, and the right half
 	    has the specified filters and post-processing.
