@@ -149,6 +149,17 @@ FilmEditor::make_film_panel ()
 		_film_sizer->Add (s);
 	}
 
+	_multiple_reels = new wxCheckBox (_film_panel, wxID_ANY, wxT ("Make multiple reels"));
+	_film_sizer->Add (_multiple_reels);
+
+	{
+		wxBoxSizer* s = new wxBoxSizer (wxHORIZONTAL);
+		_reel_size = new wxSpinCtrl (_film_panel, wxID_ANY);
+		s->Add (_reel_size);
+		add_label_to_sizer (s, _film_panel, "Gb each");
+		_film_sizer->Add (s);
+	}
+
 	_dcp_ab = new wxCheckBox (_film_panel, wxID_ANY, wxT ("A/B"));
 	video_control (_dcp_ab);
 	_film_sizer->Add (_dcp_ab, 1);
@@ -169,6 +180,8 @@ FilmEditor::make_film_panel ()
 	for (vector<DCPContentType const *>::const_iterator i = ct.begin(); i != ct.end(); ++i) {
 		_dcp_content_type->Append (std_to_wx ((*i)->pretty_name ()));
 	}
+
+	_reel_size->SetRange(1, 1000);
 }
 
 void
@@ -191,6 +204,8 @@ FilmEditor::connect_to_widgets ()
 	_still_duration->Connect (wxID_ANY, wxEVT_COMMAND_SPINCTRL_UPDATED, wxCommandEventHandler (FilmEditor::still_duration_changed), 0, this);
 	_dcp_trim_start->Connect (wxID_ANY, wxEVT_COMMAND_SPINCTRL_UPDATED, wxCommandEventHandler (FilmEditor::dcp_trim_start_changed), 0, this);
 	_dcp_trim_end->Connect (wxID_ANY, wxEVT_COMMAND_SPINCTRL_UPDATED, wxCommandEventHandler (FilmEditor::dcp_trim_end_changed), 0, this);
+	_multiple_reels->Connect (wxID_ANY, wxEVT_COMMAND_CHECKBOX_CLICKED, wxCommandEventHandler (FilmEditor::multiple_reels_toggled), 0, this);
+	_reel_size->Connect (wxID_ANY, wxEVT_COMMAND_SPINCTRL_UPDATED, wxCommandEventHandler (FilmEditor::reel_size_changed), 0, this);
 	_with_subtitles->Connect (wxID_ANY, wxEVT_COMMAND_CHECKBOX_CLICKED, wxCommandEventHandler (FilmEditor::with_subtitles_toggled), 0, this);
 	_subtitle_offset->Connect (wxID_ANY, wxEVT_COMMAND_SPINCTRL_UPDATED, wxCommandEventHandler (FilmEditor::subtitle_offset_changed), 0, this);
 	_subtitle_scale->Connect (wxID_ANY, wxEVT_COMMAND_SPINCTRL_UPDATED, wxCommandEventHandler (FilmEditor::subtitle_scale_changed), 0, this);
@@ -463,6 +478,32 @@ FilmEditor::trust_content_header_changed (wxCommandEvent &)
 	_film->set_trust_content_header (_trust_content_header->GetValue ());
 }
 
+void
+FilmEditor::multiple_reels_toggled (wxCommandEvent &)
+{
+	if (!_film) {
+		return;
+	}
+
+	if (_multiple_reels->GetValue()) {
+		_film->set_reel_size (_reel_size->GetValue() * 1e9);
+	} else {
+		_film->unset_reel_size ();
+	}
+
+	setup_reel_control_sensitivity ();
+}
+
+void
+FilmEditor::reel_size_changed (wxCommandEvent &)
+{
+	if (!_film) {
+		return;
+	}
+
+	_film->set_reel_size (static_cast<uint64_t> (_reel_size->GetValue()) * 1e9);
+}
+
 /** Called when the DCP A/B switch has been toggled */
 void
 FilmEditor::dcp_ab_toggled (wxCommandEvent &)
@@ -640,6 +681,15 @@ FilmEditor::film_changed (Film::Property p)
 	case Film::DCP_TRIM_END:
 		checked_set (_dcp_trim_end, _film->dcp_trim_end());
 		break;
+	case Film::REEL_SIZE:
+		if (_film->reel_size()) {
+			checked_set (_multiple_reels, true);
+			checked_set (_reel_size, _film->reel_size().get() / 1e9);
+		} else {
+			checked_set (_multiple_reels, false);
+		}
+		setup_reel_control_sensitivity ();
+		break;
 	case Film::AUDIO_GAIN:
 		checked_set (_audio_gain, _film->audio_gain ());
 		break;
@@ -763,6 +813,7 @@ FilmEditor::set_film (shared_ptr<Film> f)
 	film_changed (Film::SCALER);
 	film_changed (Film::DCP_TRIM_START);
 	film_changed (Film::DCP_TRIM_END);
+	film_changed (Film::REEL_SIZE);
 	film_changed (Film::DCP_AB);
 	film_changed (Film::CONTENT_AUDIO_STREAM);
 	film_changed (Film::EXTERNAL_AUDIO);
@@ -807,6 +858,8 @@ FilmEditor::set_things_sensitive (bool s)
 	_dcp_content_type->Enable (s);
 	_dcp_trim_start->Enable (s);
 	_dcp_trim_end->Enable (s);
+	_multiple_reels->Enable (s);
+	_reel_size->Enable (s);
 	_dcp_ab->Enable (s);
 	_colour_lut->Enable (s);
 	_j2k_bandwidth->Enable (s);
@@ -817,6 +870,7 @@ FilmEditor::set_things_sensitive (bool s)
 
 	setup_subtitle_control_sensitivity ();
 	setup_audio_control_sensitivity ();
+	setup_reel_control_sensitivity ();
 }
 
 /** Called when the `Edit filters' button has been clicked */
@@ -1156,4 +1210,10 @@ FilmEditor::external_audio_changed (wxCommandEvent &)
 	}
 
 	_film->set_external_audio (a);
+}
+
+void
+FilmEditor::setup_reel_control_sensitivity ()
+{
+	_reel_size->Enable (_multiple_reels->GetValue ());
 }
